Fix increment/decrement buttons could break on initial render

--- a/components/dash-core-components/src/components/css/input.css
+++ b/components/dash-core-components/src/components/css/input.css
@@ -141,5 +141,5 @@
 }
 
 input.dash-input-element:invalid {
-    outline: solid red;
+    color: red;
 }
